# branch-autoprotector

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.example.yaml
docs/: configuring-this-service-for-development.md  configuring-this-service-for-production-use.md  creating-the-github-app.md  installing-the-rust-toolchain.md  setting-up-a-reverse-proxy-with-nginx.md  setting-up-a-webhook-proxy-with-smee.io.md
src/: config.rs  error.rs  github_api.rs  main.rs  models.rs
systemd/: branch-autoprotector.service
